--- a/cell/.unit-tests/FormulaTests.html
+++ b/cell/.unit-tests/FormulaTests.html
@@ -6,10 +6,8 @@
 		<title>Unit Tests</title>
 
 		<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-		<!-- <link type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/qunit/1.11.0/qunit.css" rel="stylesheet" media="screen" /> -->
-		<!-- <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/qunit/1.11.0/qunit.js"></script> -->
-		<link rel="stylesheet" href="https://code.jquery.com/qunit/qunit-2.17.2.css">
-		<script src="https://code.jquery.com/qunit/qunit-2.17.2.js"></script>
+		<link type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/qunit/2.16.0/qunit.css" rel="stylesheet" media="screen" />
+		<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/qunit/2.16.0/qunit.min.js"></script>
 		<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/xregexp/3.2.0/xregexp-all.min.js"></script>
 
 		<script type="text/javascript" src="../../develop/sdkjs/cell/scripts.js"></script>
