--- a/common/libfont/test/index.html
+++ b/common/libfont/test/index.html
@@ -6,16 +6,18 @@
     <script type="text/javascript" src="./../../device_scale.js"></script>
     <script type="text/javascript" src="./../../browser.js"></script>
     <script type="text/javascript" src="./../../stringserialize.js"></script>
+	<script type="text/javascript" src="./../engine.js"></script>
     <script type="text/javascript" src="./../loader.js"></script>
 
+	<script type="text/javascript" src="./../common.js"></script>
     <script type="text/javascript" src="./../map.js"></script>
     <script type="text/javascript" src="./../rasterheap.js"></script>
     <script type="text/javascript" src="./../glyphstring.js"></script>
     <script type="text/javascript" src="./../character.js"></script>
+	<script type="text/javascript" src="./../classification.js"></script>
+	<script type="text/javascript" src="./../file.js"></script>
     <script type="text/javascript" src="./../manager.js"></script>
-    <script type="text/javascript" src="./../classification.js"></script>
-    <script type="text/javascript" src="./../engine/common.js"></script>
-
+    
     <script type="text/javascript" src="./../../AllFonts.js"></script>
     <script type="text/javascript" src="./../../Drawings/Externals.js"></script>
     <script type="text/javascript" src="./../../GlobalLoaders.js"></script>
