--- a/common/plugins/connector/index.html
+++ b/common/plugins/connector/index.html
@@ -24,6 +24,7 @@
   <tr style="width: 100%; height: 100%; margin:0; padding: 0;">
     <td style="width: 200px; height: 100%; background: #F4F4F4; margin:0; padding: 0;">
 		<p style="text-align: center"><button id="buttonConnect">Connect</button><p>
+		<p style="text-align: center"><button id="buttonDisconnect">Disconnect</button><p>
 		<p style="text-align: center"><button id="buttonTest1">Test1</button><p>
 		<p style="text-align: center"><button id="buttonTest2">Test2</button><p>
 	</td>
