--- a/common/plugins/connector/index.html
+++ b/common/plugins/connector/index.html
@@ -29,7 +29,7 @@
 		<p style="text-align: center"><button id="buttonTest2">Test2</button><p>
 	</td>
 	<td style="margin:0; padding: 0;">
-		<iframe id="frameEditor" src="TODO: url to editor" style="left: 0px; top: 0px; width: 100%; height: 100%; border: none;"></iframe></body>
+		<iframe id="frameEditor" src="TODO: url to editor" style="left: 0px; top: 0px; width: 100%; height: 100%; border: none;"></iframe>
 	</td>
   </tr>
 </table>
