[se] Move tests

--- a/tests/cell/spreadsheet-calculating/RunTests.html
+++ b/tests/cell/spreadsheet-calculating/RunTests.html
@@ -10,17 +10,17 @@
 		<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/qunit/1.11.0/qunit.js"></script>
 		<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/xregexp/3.2.0/xregexp-all.min.js"></script>
 
-		<script type="text/javascript" src="../../develop/sdkjs/cell/scripts.js"></script>
+		<script type="text/javascript" src="../../../develop/sdkjs/cell/scripts.js"></script>
 		<script type="text/javascript">
 			window.sdk_scripts.forEach(function(item){
-				document.write('<script type="text/javascript" src="' + item.substring('../'.length) + '"><\/script>');
+				document.write('<script type="text/javascript" src="' + item + '"><\/script>');
 			});
-		</script>
+    	</script>
+		<script type="text/javascript" src="tests.js"></script>
 
-		<script type="text/javascript" src="stax-reader.js"></script>
 	</head>
 	<body>
-		<h1 id="qunit-header">stax-reader</h1>
+		<h1 id="qunit-header">Spreadsheets Tests</h1>
 		<h2 id="qunit-banner"></h2>
 		<div id="qunit-testrunner-toolbar"></div>
 		<h2 id="qunit-userAgent"></h2>
