--- a/tests/cell/spreadsheet-calculating/FormulaTests.html
+++ b/tests/cell/spreadsheet-calculating/FormulaTests.html
@@ -17,7 +17,7 @@
 			});
     	</script>
 
-		<script type="text/javascript" src=../../../cell/document/empty.js"></script>
+		<script type="text/javascript" src="../../../cell/document/empty.js"></script>
 		<script type="text/javascript" src="FormulaTests.js"></script>
 	</head>
 	<body>
