--- a/tests/cell/spreadsheet-calculating/PivotTests.html
+++ b/tests/cell/spreadsheet-calculating/PivotTests.html
@@ -18,7 +18,7 @@
 			});
     	</script>
 
-		<script type="text/javascript" src="../../document/empty.js"></script>
+		<script type="text/javascript" src="../../../cell/document/empty.js"></script>
 		<script type="text/javascript" src="PivotTests.js"></script>
 	</head>
 	<body>
