--- a/tests/word/forms/forms.html
+++ b/tests/word/forms/forms.html
@@ -5,15 +5,10 @@
 
     <title>Document calculation tests</title>
 
-<!--    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>-->
-<!--    <link type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/qunit/2.16.0/qunit.css" rel="stylesheet" media="screen" />-->
-<!--    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/qunit/2.16.0/qunit.js"></script>-->
-<!--    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/xregexp/3.2.0/xregexp-all.min.js"></script>-->
-
-    <script type="text/javascript" src="../../../../../3dParty/jquery.min.js"></script>
-    <link type="text/css" href="../../../../../3dParty/qunit.css" rel="stylesheet" media="screen" />
-    <script type="text/javascript" src="../../../../../3dParty/qunit.js"></script>
-    <script type="text/javascript" src="../../../../../3dParty/xregexp-all.min.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <link type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/qunit/2.16.0/qunit.css" rel="stylesheet" media="screen" />
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/qunit/2.16.0/qunit.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/xregexp/3.2.0/xregexp-all.min.js"></script>
 
     <script type="text/javascript" src="../../../develop/sdkjs/word/scripts.js"></script>
     <script type="text/javascript">
